[workspace]
resolver = "3"
members = ["puzzles/first", "puzzles/second", "puzzles/third", "puzzles/fourth", "puzzles/fifth", "puzzles/sixth", "puzzles/seventh", "puzzles/eighth", "puzzles/ninth","puzzles/tenth"]
default-members = [
    "puzzles/first",
    "puzzles/second",
    "puzzles/third",
    "puzzles/fourth",
    "puzzles/fifth",
    "puzzles/sixth",
    "puzzles/seventh",
    "puzzles/eighth",
    "puzzles/ninth",
    "puzzles/tenth"
]
