[workspace]
resolver = "3"
members = ["puzzles/first", "puzzles/second", "puzzles/third", "puzzles/fourth", "puzzles/fifth", "puzzles/sixth", "puzzles/seventh", "puzzles/eighth", "puzzles/ninth","puzzles/tenth","puzzles/eleventh"]
default-members = [
    "puzzles/first",
    "puzzles/second",
    "puzzles/third",
    "puzzles/fourth",
    "puzzles/fifth",
    "puzzles/sixth",
    "puzzles/seventh",
    "puzzles/eighth",
    "puzzles/ninth",
    "puzzles/tenth",
    "puzzles/eleventh"
]
